<resources>
    <string name="app_name">SportEvents</string>
    <string name="sporteventlogo">SportEventLogo</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="suscribe">Suscribe</string>
    <string name="log_in">Log in</string>
    <string name="adress">Adress</string>
    <string name="sport">Sport</string>
    <string name="number_of_player">Number of player</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="slogan">J\'ai un short ..</string>
    <string name="joinEvent">Join Event</string>
    <string name="newEvent">Create New Event</string>
    <string name="muEvents">My Events</string>
</resources>
